[package]
name = "abstract_orm"
description = """
Getset, we're ready to go!

A procedural macro for generating the most basic getters and setters on fields.
"""
version = "0.1.2"
authors = ["Ana Hobden <ana@hoverbear.org>"]
license = "MIT"
edition = "2018"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "setter", "getters", "setters"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "2"
proc-macro2 = { version = "1", default-features = false }
proc-macro-error = "1.0"
prettyplease = "0.2.16"
convert_case = "0.6.0"
