[package]
name = "abstract_orm"
description = """
procedural macros to generate abstract diesel fetch methods
"""
version = "0.1.0"
authors = ["Armando Lesaj <armandolesaj@gmail.com>"]
license-file = "LICENSE"
edition = '2021'

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "diesel", "mysql", "orm", "derive"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ['extra-traits']}
proc-macro2 = { version = "1", default-features = false }
proc-macro-error = "1.0"
prettyplease = "0.2.16"
convert_case = "0.6.0"
